# agentic-llm-observability

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  dependencies.py  main.py  schemas.py
api/routers/: __init__.py  alerts.py  costs.py  drift.py  ingest.py  latency.py  prompts.py  quality.py  revenue_desk.py
audit/: __init__.py  models.py
collector/: __init__.py  middleware.py  sdk.py
costs/: __init__.py  cost_calculator.py  optimizer.py  provider_models.py
drift/: __init__.py  alert_engine.py  semantic_drift.py
integrations/: __init__.py  prometheus.py
prompts/: __init__.py  ab_evaluator.py  version_store.py
providers/: __init__.py
quality/: __init__.py  hallucination_detector.py  llm_judge.py  quality_gate.py
revenue_desk/: __init__.py  agents.py  catalog.py  llm.py  models.py  policies.py  service.py
seed_data/: __init__.py  generator.py
tests/: __init__.py  test_api.py  test_cost_calculator.py  test_models.py  test_optimizer.py  test_prompt_drift.py  test_quality.py  test_revenue_desk.py  test_tracking.py
tracking/: __init__.py  latency_tracker.py  token_tracker.py
ui/: index.html  package-lock.json  package.json  phase12-smoke.spec.ts  vite.config.d.ts  vite.config.js  vite.config.ts
ui/src/: App.tsx  main.tsx  style.css  vite-env.d.ts
ui/src/api/: client.ts
ui/src/components/: AlertBanner.tsx  ChartCard.tsx  DataTable.tsx  EmptyState.tsx  MetricCard.tsx  SectionHeader.tsx  SkeletonLoader.tsx  StatusBadge.tsx  index.ts
(+11 files in other folders)
