# Python package, dependency, lint, type-check, and test configuration.
# Author: Sarala Biswal

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agentic-llm-observability"
version = "0.1.0"
description = "Production-grade LLM observability for cost, quality, latency, prompts, and drift."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sarala Biswal" }]
dependencies = [
  "aiosqlite>=0.20.0",
  "fastapi>=0.111.0",
  "greenlet>=3.0.0",
  "httpx>=0.27.0",
  "litellm>=1.40.0",
  "numpy>=1.26.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0.0",
  "sentence-transformers>=2.7.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "faker>=25.0.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = [
  "api",
  "audit",
  "collector",
  "costs",
  "drift",
  "integrations",
  "prompts",
  "providers",
  "quality",
  "revenue_desk",
  "seed_data",
  "tracking",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
